--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
     <br>
     <div class="container">
       <div class="card">
-         <button class="tombol" onclick="submitVote('1')">Opsi 1</button>
+        <img src="ASSET/51.png" class="foto">
+         <button class="tombol" onclick="submitVote('1')">PASLON 1</button>
       </div>
     <div class="container">
       <div class="card">
-        <button class="tombol" onclick="submitVote('2')">Opsi 2</button>
+        <img src="ASSET/51.png" class="foto">
+        <button class="tombol" onclick="submitVote('2')">PASLON 2</button>
       </div>
       <div class="container">
       <div class="card">
-        <button class="tombol" onclick="submitVote('3')">Opsi 3</button>
+        <img src="ASSET/51.png" class="foto">
+        <button class="tombol" onclick="submitVote('3')">PASLON 3</button>
       </div>
 
     <div id="status"></div>
